<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260101010310 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE hunt (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, title VARCHAR(255) NOT NULL, description TEXT DEFAULT NULL, max_duration INT DEFAULT NULL, status VARCHAR(50) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, mode VARCHAR(20) NOT NULL, time_limit_mode VARCHAR(20) NOT NULL, organizer_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_21FA5947876C4DDA ON hunt (organizer_id)');
        $this->addSql('CREATE TABLE hunter (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE qr_code (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, code VARCHAR(255) NOT NULL, order_position INT NOT NULL, latitude NUMERIC(10, 8) DEFAULT NULL, longitude NUMERIC(11, 8) DEFAULT NULL, is_placed BOOLEAN NOT NULL, placed_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, is_start_code BOOLEAN NOT NULL, hunt_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_7D8B1FB52585A34B ON qr_code (hunt_id)');
        $this->addSql('CREATE TABLE question (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(50) NOT NULL, question_text TEXT NOT NULL, points INT NOT NULL, time_limit INT DEFAULT NULL, image VARCHAR(255) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, hunt_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_B6F7494E2585A34B ON question (hunt_id)');
        $this->addSql('CREATE TABLE question_choice (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, choice_text VARCHAR(500) NOT NULL, is_correct BOOLEAN NOT NULL, order_position INT NOT NULL, question_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_C6F6759A1E27F6BF ON question_choice (question_id)');
        $this->addSql('CREATE TABLE session (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, max_duration INT NOT NULL, started_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, ended_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, status VARCHAR(50) NOT NULL, hunt_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_D044D5D42585A34B ON session (hunt_id)');
        $this->addSql('CREATE TABLE session_answer (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, answer_text TEXT DEFAULT NULL, is_correct BOOLEAN DEFAULT NULL, points INT DEFAULT NULL, answered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, time_spent INT DEFAULT NULL, session_hunter_id INT NOT NULL, qr_code_id INT NOT NULL, question_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_B5B6407CE43E198B ON session_answer (session_hunter_id)');
        $this->addSql('CREATE INDEX IDX_B5B6407C12E4AD80 ON session_answer (qr_code_id)');
        $this->addSql('CREATE INDEX IDX_B5B6407C1E27F6BF ON session_answer (question_id)');
        $this->addSql('CREATE TABLE session_hunter (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, score INT DEFAULT NULL, started_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, ended_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, status VARCHAR(50) NOT NULL, session_id INT NOT NULL, hunter_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_25BC863C613FECDF ON session_hunter (session_id)');
        $this->addSql('CREATE INDEX IDX_25BC863CA7DC5C81 ON session_hunter (hunter_id)');
        $this->addSql('CREATE TABLE session_location (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, latitude NUMERIC(10, 8) NOT NULL, longitude NUMERIC(11, 8) NOT NULL, recorded_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, session_hunter_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_D532E9A3E43E198B ON session_location (session_hunter_id)');
        $this->addSql('CREATE TABLE "user" (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, email VARCHAR(180) NOT NULL, roles JSON NOT NULL, password VARCHAR(255) NOT NULL, first_name VARCHAR(100) NOT NULL, last_name VARCHAR(100) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_IDENTIFIER_EMAIL ON "user" (email)');
        $this->addSql('ALTER TABLE hunt ADD CONSTRAINT FK_21FA5947876C4DDA FOREIGN KEY (organizer_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE qr_code ADD CONSTRAINT FK_7D8B1FB52585A34B FOREIGN KEY (hunt_id) REFERENCES hunt (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE question ADD CONSTRAINT FK_B6F7494E2585A34B FOREIGN KEY (hunt_id) REFERENCES hunt (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE question_choice ADD CONSTRAINT FK_C6F6759A1E27F6BF FOREIGN KEY (question_id) REFERENCES question (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE session ADD CONSTRAINT FK_D044D5D42585A34B FOREIGN KEY (hunt_id) REFERENCES hunt (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE session_answer ADD CONSTRAINT FK_B5B6407CE43E198B FOREIGN KEY (session_hunter_id) REFERENCES session_hunter (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE session_answer ADD CONSTRAINT FK_B5B6407C12E4AD80 FOREIGN KEY (qr_code_id) REFERENCES qr_code (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE session_answer ADD CONSTRAINT FK_B5B6407C1E27F6BF FOREIGN KEY (question_id) REFERENCES question (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE session_hunter ADD CONSTRAINT FK_25BC863C613FECDF FOREIGN KEY (session_id) REFERENCES session (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE session_hunter ADD CONSTRAINT FK_25BC863CA7DC5C81 FOREIGN KEY (hunter_id) REFERENCES hunter (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE session_location ADD CONSTRAINT FK_D532E9A3E43E198B FOREIGN KEY (session_hunter_id) REFERENCES session_hunter (id) NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE hunt DROP CONSTRAINT FK_21FA5947876C4DDA');
        $this->addSql('ALTER TABLE qr_code DROP CONSTRAINT FK_7D8B1FB52585A34B');
        $this->addSql('ALTER TABLE question DROP CONSTRAINT FK_B6F7494E2585A34B');
        $this->addSql('ALTER TABLE question_choice DROP CONSTRAINT FK_C6F6759A1E27F6BF');
        $this->addSql('ALTER TABLE session DROP CONSTRAINT FK_D044D5D42585A34B');
        $this->addSql('ALTER TABLE session_answer DROP CONSTRAINT FK_B5B6407CE43E198B');
        $this->addSql('ALTER TABLE session_answer DROP CONSTRAINT FK_B5B6407C12E4AD80');
        $this->addSql('ALTER TABLE session_answer DROP CONSTRAINT FK_B5B6407C1E27F6BF');
        $this->addSql('ALTER TABLE session_hunter DROP CONSTRAINT FK_25BC863C613FECDF');
        $this->addSql('ALTER TABLE session_hunter DROP CONSTRAINT FK_25BC863CA7DC5C81');
        $this->addSql('ALTER TABLE session_location DROP CONSTRAINT FK_D532E9A3E43E198B');
        $this->addSql('DROP TABLE hunt');
        $this->addSql('DROP TABLE hunter');
        $this->addSql('DROP TABLE qr_code');
        $this->addSql('DROP TABLE question');
        $this->addSql('DROP TABLE question_choice');
        $this->addSql('DROP TABLE session');
        $this->addSql('DROP TABLE session_answer');
        $this->addSql('DROP TABLE session_hunter');
        $this->addSql('DROP TABLE session_location');
        $this->addSql('DROP TABLE "user"');
    }
}
