// Booty QR - Database Schema
// Use https://dbdiagram.io to visualize

Project BootyQR {
  database_type: 'PostgreSQL'
  Note: 'Système de chasse aux QR codes avec questions interactives'
}

// USERS & AUTHENTICATION
Table users {
  id uuid [pk]
  email varchar(180) [unique, not null]
  password varchar(255) [not null]
  roles json [not null]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    email
  }
  
  Note: 'Organisateurs (admins) qui créent les chasses'
}

// HUNTS
Table hunts {
  id uuid [pk]
  organizer_id uuid [ref: > users.id, not null]
  title varchar(255) [not null]
  description text
  max_duration integer [note: 'Durée max en minutes, nullable']
  status varchar(50) [not null, default: 'draft']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  started_at timestamp
  ended_at timestamp
  
  indexes {
    organizer_id
    status
    created_at
  }
  
  Note: 'Chasses créées par les organisateurs. Status: draft, ready, active, completed, archived'
}

// QR CODES
Table qr_codes {
  id uuid [pk]
  hunt_id uuid [ref: > hunts.id, not null]
  code varchar(255) [unique, not null]
  order_position integer [not null]
  latitude decimal(10,8)
  longitude decimal(11,8)
  is_placed boolean [not null, default: false]
  placed_at timestamp
  created_at timestamp [not null, default: `now()`]
  
  indexes {
    hunt_id
    code [unique]
    is_placed
  }
  
  Note: 'QR codes générés pour une chasse. Placés géographiquement par organisateur mobile'
}

// QUESTIONS
Table questions {
  id uuid [pk]
  hunt_id uuid [ref: > hunts.id, not null]
  type varchar(50) [not null]
  question_text text [not null]
  points integer [not null, default: 10]
  time_limit integer [note: 'Temps limite en secondes']
  image varchar(255)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    hunt_id
    type
  }
  
  Note: 'Questions d''une chasse. Type: multiple_choice ou free_text'
}

// QUESTION CHOICES
Table question_choices {
  id uuid [pk]
  question_id uuid [ref: > questions.id, not null]
  choice_text varchar(500) [not null]
  is_correct boolean [not null, default: false]
  order_position integer [not null]
  
  indexes {
    question_id
  }
  
  Note: 'Réponses proposées pour questions à choix multiples'
}

// PARTICIPANTS
Table participants {
  id uuid [pk]
  email varchar(180)
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  phone_number varchar(20)
  created_at timestamp [not null, default: `now()`]
  
  indexes {
    email
  }
  
  Note: 'Participants qui jouent aux chasses via mobile'
}

// SESSIONS
Table sessions {
  id uuid [pk]
  hunt_id uuid [ref: > hunts.id, not null]
  participant_id uuid [ref: > participants.id, not null]
  status varchar(50) [not null, default: 'in_progress']
  started_at timestamp [not null, default: `now()`]
  completed_at timestamp
  total_duration integer [not null, default: 0, note: 'En secondes']
  total_score integer [not null, default: 0]
  distance_traveled decimal(8,2) [not null, default: 0, note: 'En kilomètres']
  average_speed decimal(5,2) [not null, default: 0, note: 'En km/h']
  
  indexes {
    hunt_id
    participant_id
    status
    started_at
    (hunt_id, total_score) [name: 'ranking_index']
  }
  
  Note: 'Session d''un participant pour une chasse. Status: in_progress, completed, expired, abandoned'
}

// SESSION ANSWERS
Table session_answers {
  id uuid [pk]
  session_id uuid [ref: > sessions.id, not null]
  qr_code_id uuid [ref: > qr_codes.id, not null]
  question_id uuid [ref: > questions.id, not null]
  answer_text text [note: 'Pour réponses libres']
  selected_choices json [note: 'IDs des choix sélectionnés']
  is_correct boolean [note: 'null si réponse libre pas encore notée']
  points_awarded integer [not null, default: 0]
  time_spent integer [not null, note: 'Temps passé à répondre en secondes']
  scanned_at timestamp [not null]
  answered_at timestamp [not null]
  
  indexes {
    session_id
    qr_code_id
    question_id
    (session_id, scanned_at)
  }
  
  Note: 'Réponses d''un participant aux questions lors d''une session'
}

// SESSION LOCATIONS
Table session_locations {
  id uuid [pk]
  session_id uuid [ref: > sessions.id, not null]
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  accuracy decimal(8,2) [not null, note: 'Précision en mètres']
  recorded_at timestamp [not null, default: `now()`]
  
  indexes {
    session_id
    recorded_at
    (session_id, recorded_at) [name: 'tracking_index']
  }
  
  Note: 'Tracking GPS des participants pendant leurs sessions'
}

// RELATIONS SUMMARY
// users 1--* hunts (organizer)
// hunts 1--* qr_codes
// hunts 1--* questions
// hunts 1--* sessions
// questions 1--* question_choices
// participants 1--* sessions
// sessions 1--* session_answers
// sessions 1--* session_locations
// qr_codes 1--* session_answers
// questions 1--* session_answers
